--- a/src/index.css
+++ b/src/index.css
@@ -122,3 +122,12 @@
 .slick-next {
   right: -25px !important;
 }
+/* Utility to hide scrollbars while maintaining scroll functionality */
+.no-scrollbar::-webkit-scrollbar {
+  display: none;
+}
+
+.no-scrollbar {
+  -ms-overflow-style: none;  /* IE and Edge */
+  scrollbar-width: none;  /* Firefox */
+}
